# ogman

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ogman/: __init__.py
src/ogman/eda/: __init__.py  columns.py  summary.py
