[project]
name = "ogman"
version = "0.1.0"
description = "My help to EDA/ML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.26"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]