[project]
name = "ogman"
version = "0.1.0"
description = "OGMAN: Tools for automated EDA and Machine Learning workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OscarGoldman"}
    ]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ogman*"]
namespaces = false
